feat: 벌통 텔레메트리 과거 조회 API에 펠티어·팬·전력 필드 추가